--- a/202001097.md
+++ b/202001097.md
@@ -1,18 +1,48 @@
 # Lab-1_202001097
 
-1. Identify Functional Requirements and Non-Functional Requirements
+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-* Functional Requirements
+#1. Identify Functional Requirements and Non-Functional Requirements
+
+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------
+
+# Functional Requirements
 
 1. Only users who are a part of the instituition are allowed to use the facility and only they can login in the system.
+
 2. A user should login using his/her email-id as provided by the instituition.
-3. Whenever a user logs in the system for the first time, verification mail should be sent to his/her email-id. Also, authentication is necessary for logging in the system everytime he/she wants to use the system, since confidential information like passwords should not be stored in plaintext.
-4. Only few people including librarian have the administrative privileges to enter, update or delete records, etc. Other users like employees and students can only use the system to return, issue or extending the deadline of the books. Others can only search or browse the books and cannot have access to them.
+
+3. Whenever a user logs in the system for the first time, verification mail should be sent to his/her email-id. 
+Also, authentication is necessary for logging in the system everytime he/she wants to use the system, since confidential information like passwords should not be stored in plaintext.
+
+4. Only few people including librarian must have the administrative privileges.
+
+   Administrative privileges include:
+   # enter a new record of book 
+   # update information about books/ articles
+   # delete an existing record
+
+   Privileges for users including employees and students:
+   # Browse or search a book
+   # Issue a book
+   # return it ot extend the deadline
+
+   Non-members of the institute can only search or browse the books and cannot have access to them.
+
 5. After a user issues a book, information regarding the deadline of returning the book, fine, etc. should be mailed to the user.
 
-* Non-Functional Requirements
+6. Reminder mail should be sent to the user and he/she should be allowed to extend the deadline if no one has booked the particular book in advance.
+
+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------
+
+# Non-Functional Requirements
 
 1. After 15 mins of non-usage of the system, the user is logged out.
 2. When a user issues a book, the information about it should be updated within 3 seconds.
-3. Confirmation mail should be sent within 1 minute.
-4. 
+3. Confirmation mail after issuing the book should be sent within 1 minute.
+4. Reminder mail to return the book must be sent atleast a day or two before the deadline and the user should be allowed to extend the deadline upto 4 hours before the deadline. After that if he/she doesnot return the book, fine should be charged.
+
+
+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------
+
+2. Identify scope, features and non-functional aspects of the following problem.
