--- a/202001097.md
+++ b/202001097.md
@@ -18,14 +18,14 @@ Also, authentication is necessary for logging in the system everytime he/she wan
 4. Only few people including librarian must have the administrative privileges.
 
    Administrative privileges include:
-   # enter a new record of book 
-   # update information about books/ articles
-   # delete an existing record
+   * enter a new record of book 
+   * update information about books/ articles
+   * delete an existing record
 
    Privileges for users including employees and students:
-   # Browse or search a book
-   # Issue a book
-   # return it ot extend the deadline
+   * Browse or search a book
+   * Issue a book
+   * return it ot extend the deadline
 
    Non-members of the institute can only search or browse the books and cannot have access to them.
 
