--- a/202001097.md
+++ b/202001097.md
@@ -2,7 +2,7 @@
 
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-#1. Identify Functional Requirements and Non-Functional Requirements
+# 1. Identify Functional Requirements and Non-Functional Requirements
 
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
@@ -22,7 +22,7 @@ Also, authentication is necessary for logging in the system everytime he/she wan
    * update information about books/ articles
    * delete an existing record
 
-   Privileges for users including employees and students:
+   Privileges for users including employees and students: (they will have limited access)
    * Browse or search a book
    * Issue a book
    * return it ot extend the deadline
@@ -33,16 +33,25 @@ Also, authentication is necessary for logging in the system everytime he/she wan
 
 6. Reminder mail should be sent to the user and he/she should be allowed to extend the deadline if no one has booked the particular book in advance.
 
+7. Librarians should be given their authorized login ID and password without which the system can not be accessed.
+
+8. Librarians will have access to information about each student and the book he/she has issued.
+
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 # Non-Functional Requirements
 
 1. After 15 mins of non-usage of the system, the user is logged out.
+
 2. When a user issues a book, the information about it should be updated within 3 seconds.
+
 3. Confirmation mail after issuing the book should be sent within 1 minute.
+
 4. Reminder mail to return the book must be sent atleast a day or two before the deadline and the user should be allowed to extend the deadline upto 4 hours before the deadline. After that if he/she doesnot return the book, fine should be charged.
+
+5. 
 
 
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-2. Identify scope, features and non-functional aspects of the following problem.
+# 2. Identify scope, features and non-functional aspects of the following problem.
