--- a/202001097.md
+++ b/202001097.md
@@ -12,8 +12,7 @@
 
 2. A user should login using his/her email-id as provided by the instituition.
 
-3. Whenever a user logs in the system for the first time, verification mail should be sent to his/her email-id. 
-Also, authentication is necessary for logging in the system everytime he/she wants to use the system, since confidential information like passwords should not be stored in plaintext.
+3. Whenever a user logs in the system for the first time, verification mail should be sent to his/her email-id. Also, authentication is necessary for logging in the system everytime he/she wants to use the system.
 
 4. Only few people including librarian must have the administrative privileges.
 
@@ -37,6 +36,8 @@ Also, authentication is necessary for logging in the system everytime he/she wan
 
 8. Librarians will have access to information about each student and the book he/she has issued.
 
+9. 
+
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 # Non-Functional Requirements
@@ -49,7 +50,9 @@ Also, authentication is necessary for logging in the system everytime he/she wan
 
 4. Reminder mail to return the book must be sent atleast a day or two before the deadline and the user should be allowed to extend the deadline upto 4 hours before the deadline. After that if he/she doesnot return the book, fine should be charged.
 
-5. 
+5. Confidential information like passwords should be stored in plaintexts.
+
+6. In case of power failure or any other unwanted failure, the software should return to its previous working condition with the help of rollback mechanism.
 
 
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------
