--- a/202001097.md
+++ b/202001097.md
@@ -36,7 +36,9 @@
 
 8. Librarians will have access to information about each student and the book he/she has issued.
 
-9. 
+9. The final deliverable web application should be run only within the institue LAN.
+
+10. Security of the system is very necessary and utmost care should be taken about it.
 
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
@@ -53,6 +55,14 @@
 5. Confidential information like passwords should be stored in plaintexts.
 
 6. In case of power failure or any other unwanted failure, the software should return to its previous working condition with the help of rollback mechanism.
+
+7. The librarian's page should be refreshed every 3 minutes to load new information.
+
+8. The web application should be built with the help of HTML5.
+
+9. The software should ensure portability, so that when different operating systems are used the website should still work fine.
+
+10. The software should be capable enough to handle thousands of users at the same time without compromising with the performance of the software.
 
 
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------
