--- a/202001097.md
+++ b/202001097.md
@@ -70,3 +70,5 @@
 # 2. Identify scope, features and non-functional aspects of the following problem.
 
 # Scope
+
+* We are creating a mobile application that recognizes basic key sounds for people who are suffering from disailities like hearing loss with the help of artificial intelligence that gives immediate alerts to the users. This application will be a mobile based android application.
