--- a/202001097.md
+++ b/202001097.md
@@ -77,8 +77,28 @@
 
 # Features
 
+1. It uses artificial intelligence to recognize sounds like car sounds, babies or the sounds that are of events of interest to the community.
+
+2. Immediate alerts are given by the software to the users when any sound is detected.
+
+3. Continuous logging is done for sending immediate alerts.
+
+4. The app uses is optimized for Android with low-latency so that it works in real-time for an extended amout of time.
+
+5. The mobile application ensures portability and can work fine when working in different operating systems.
+
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 # Non-Functional Aspects
+
+1. The application is an impactful solution for the people who have hearing loss like disabilities.
+
+2. The app uses is optimized for Android with low-latency so that it works in real-time use.
+
+3. To send an immediate alert continuously logging must be done.
+
+4. The application should ensure portability, so that when different operating systems are used the application can still work fine.
+
+5. In case of power failure or any other unwanted failure, the application should return to its previous working condition with the help of rollback mechanism.
 
 -----------------------------------------------------------------------------------------------------------------------------------------------------------------------
